localization/v2.4.x/site/it/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  Questa pagina fornisce un elenco di tutorial per interagire con Milvus e con
  strumenti di terze parti.
title: Panoramica delle integrazioni
---
<h1 id="Integrations-Overview" class="common-anchor-header">Panoramica delle integrazioni<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Questa pagina fornisce un elenco di tutorial per interagire con Milvus e con strumenti di terze parti.</p>
<table>
<thead>
<tr><th>Tutorial</th><th>Caso d'uso</th><th>Partner o stack</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_llamaindex.md">RAG con Milvus e LlamaIndex</a></td><td>RAG</td><td>Milvus, LLamaIndex</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_langchain.md">RAG con Milvus e LangChain</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/it/v2.4.x/milvus_hybrid_search_retriever.md">Ricerca ibrida Milvus in LangChain</a></td><td>Ricerca ibrida</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_openai.md">Ricerca semantica con Milvus e OpenAI</a></td><td>Ricerca semantica</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_cohere.md">Risposta alle domande con Milvus e Cohere</a></td><td>Ricerca semantica</td><td>Milvus, Cohere</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_hugging-face.md">Risposta alle domande con Milvus e HuggingFace</a></td><td>Risposta alle domande</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_pytorch.md">Ricerca per immagini con Milvus e Pytorch</a></td><td>Ricerca semantica</td><td>Milvus, Pytorch</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_sentencetransformers.md">Ricerca di film utilizzando Milvus e SentenceTransfromers</a></td><td>Ricerca semantica</td><td>Milvus, Trasformatori di frasi</td></tr>
<tr><td><a href="/docs/it/v2.4.x/basic_usage_langchain.md">Usare Milvus come archivio vettoriale in LangChain</a></td><td>Ricerca semantica</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_haystack.md">RAG con Milvus e Haystack</a></td><td>RAG</td><td>Milvus, Haystack</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_voxel51.md">Condurre ricerche di visione con Milvus e FiftyOne</a></td><td>Ricerca semantica</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_voyageai.md">Ricerca semantica con Milvus e VoyageAI</a></td><td>Ricerca semantica</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_bentoml.md">RAG con Milvus e BentoML</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_dspy.md">RAG con Milvus e DSPy</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_jina.md">Ricerca semantica con Milvus e Jina</a></td><td>Ricerca semantica</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_snowpark.md">Milvus su Snowpark Container Services</a></td><td>Connessione dati</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_whyhow.md">Recupero basato su regole con Milvus e WhyHow</a></td><td>Risposta alle domande</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_langfuse.md">Milvus in Langfuse</a></td><td>Osservabilità</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_ragas.md">Valutazione RAG con Ragas e Milvus</a></td><td>Valutazione</td><td>Milvus, Ragas</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_memgpt.md">Agente Chatbot con Milvus e MemGPT</a></td><td>Agente</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_fastgpt.md">Come distribuire FastGPT con Milvus</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_vanna.md">Scrivere SQL con Vanna e Milvus</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_camel.md">RAG con Milvus e Camel</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/it/v2.4.x/integrate_with_airbyte.md">Airbyte e Milvus: infrastruttura open source per la movimentazione dei dati</a></td><td>Connessione dati</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/it/v2.4.x/video_search_with_twelvelabs_and_milvus.md">Ricerca video avanzata: Sfruttare Twelve Labs e Milvus per la ricerca semantica</a></td><td>Ricerca semantica</td><td>Milvus, Twelve Labs</td></tr>
<tr><td><a href="/docs/it/v2.4.x/milvus_rag_with_vllm.md">Costruire RAG con Milvus, vLLM e Llama 3.1</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/it/v2.4.x/llama_agents_metadata.md">Sistemi multi-agente con Mistral AI, Milvus e Llama-agenti</a></td><td>Agente</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/it/v2.4.x/kafka-connect-milvus.md">Collegare Kafka con Milvus</a></td><td>Fonti di dati</td><td>Milvus, Kafka</td></tr>
<tr><td><a href="/docs/it/v2.4.x/kotaemon_with_milvus.md">Kotaemon RAG con Milvus</a></td><td>RAG</td><td>Milvus, Kotaemon</td></tr>
<tr><td><a href="/docs/it/v2.4.x/apify_milvus_rag.md">Generazione aumentata di recupero: Crawling di siti web con Apify e salvataggio dei dati in Milvus per la risposta alle domande</a></td><td>Fonti di dati</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/it/v2.4.x/evaluation_with_deepeval.md">Valutazione con DeepEval</a></td><td>Valutazione e osservabilità</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/it/v2.4.x/evaluation_with_phoenix.md">Valutazione con Arize Pheonix</a></td><td>Valutazione e osservabilità</td><td>Milvus, Arize Pheonix</td></tr>
<tr><td><a href="/docs/it/v2.4.x/dify_with_milvus.md">Distribuzione di Dify con Milvus</a></td><td>Ochestrazione</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/it/v2.4.x/rag_with_langflow.md">Costruire un sistema RAG usando Langflow con Milvus</a></td><td>Ochestrazione</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/it/v2.4.x/build_rag_on_arm.md">Costruire RAG su architettura Arm</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/it/v2.4.x/build_RAG_with_milvus_and_fireworks.md">Costruire RAG con Milvus e Fireworks AI</a></td><td>LLM</td><td>Milvus, Fireworks AI</td></tr>
<tr><td><a href="/docs/it/v2.4.x/build_RAG_with_milvus_and_lepton.md">Costruire RAG con Milvus e Lepton AI</a></td><td>LLMs</td><td>Milvus, Lepton AI</td></tr>
<tr><td><a href="/docs/it/v2.4.x/build_RAG_with_milvus_and_siliconflow">Costruire RAG con Milvus e SiliconFlow</a></td><td>LLM</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/it/v2.4.x/rag_with_milvus_and_unstructured.md">Costruire una RAG con Milvus e fonti di dati non strutturati</a></td><td>Fonti di dati non strutturati</td><td>Milvus, non strutturato</td></tr>
<tr><td><a href="/docs/it/v2.4.x/RAG_with_pii_and_milvus.md">Costruire un RAG con Milvus + PII Masker</a></td><td>Fonti di dati</td><td>Milvus, PII Masker</td></tr>
<tr><td><a href="/docs/it/v2.4.x/use_milvus_in_private_gpt.md">Utilizzare Milvus in PrivateGPT</a></td><td>Ochestrazione</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/quickstart_mem0_with_milvus.md">Come iniziare con Mem0 e Milvus</a></td><td>Agenti</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/it/v2.4.x/knowledge_table_with_milvus.md">Tabella della conoscenza con Milvus</a></td><td>Ingegneria della conoscenza</td><td>Tabella della conoscenza, Milvus</td></tr>
<tr><td><a href="/docs/it/v2.4.x/use_milvus_in_docsgpt.md">Utilizzare Milvus in DocsGPT</a></td><td>Ochestrazione</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/it/v2.4.x/use_milvus_with_sambanova.md">Utilizzare Milvus con SambaNova</a></td><td>Orchestrazione</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/it/v2.4.x/build_RAG_with_milvus_and_cognee.md">Costruire RAG con Milvus e Cognee</a></td><td>Ingegneria della conoscenza</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/it/v2.4.x/build_RAG_with_milvus_and_gemini.md">Costruire RAG con Milvus e Gemini</a></td><td>LLM</td><td>Milvus, Gemini</td></tr>
<tr><td><a href="/docs/it/v2.4.x/build_RAG_with_milvus_and_ollama.md">Costruire RAG con Milvus e Ollama</a></td><td>LLM</td><td>Milvus, Ollama</td></tr>
<tr><td><a href="/docs/it/v2.4.x/milvus_rag_with_dynamiq.md">Come iniziare con Dynamiq e Milvus</a></td><td>Orchestrazione</td><td>Milvus, Dynamiq</td></tr>
</tbody>
</table>
